--- a/webapp/templates/home.html
+++ b/webapp/templates/home.html
@@ -5,6 +5,8 @@
         content="width=device-width, initial-scale=1.0,
                  maximum-scale=1.0, minimum-scale=1.0, user-scalable=no,
                  minimal-ui">
+    <link rel="stylesheet" type="text/css"
+        href="{{ url_for('static', filename='style.css') }}">
     <script type="text/javascript"
         src="{{ url_for('static', filename='jquery-2.2.0.min.js') }}"></script>
     <script type="text/javascript"
@@ -16,8 +18,6 @@
     </style>
   </head>
   <body>
-    <h1>arduipi</h1>
-    <h2>KAKU</h2>
     <button onclick="$.post('/api/kaku', {state: true,
                                           channel: 0})">on</button>
     <button onclick="$.post('/api/kaku', {state: false,
@@ -34,5 +34,6 @@
                                           group: true})">all on</button>
     <button onclick="$.post('/api/kaku', {state: false,
                                           group: true})">all off</button><br>
+    <button onclick="$.post('/api/reset')">reset</button>
   </body>
 </html>
